--- a/src/rpart/101_PrimerModelo.ipynb
+++ b/src/rpart/101_PrimerModelo.ipynb
@@ -1,17 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Arbol elemental con libreria  rpart"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: data.table\n",
+      "\n",
+      "Loading required package: rpart\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "require(\"data.table\")\n",
     "require(\"rpart\")"
@@ -19,24 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Aqui se debe poner la carpeta de la computadora local\n",
-    "setwd(\"M:\\\\\")  #Establezco el Working Directory"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "cargo los datos de 202009 que es donde voy a ENTRENAR el modelo"
+    "setwd(\"/Users/fran/Documents/Maestria/DM\\ en\\ Economia\\ y\\ Finanzas\")  #Establezco el Working Directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +41,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Genero el modelo, llamando a la funcion  rpart"
+    "Genero el modelo, llamando a la funcion rpart"
    ]
   },
   {
@@ -66,13 +63,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Cargo los datos de 202111, para luego aplicarle el modelo"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -82,10 +72,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aplico el modelo generado que esta en la variable \"modelo\"  a los datos \"dapply\""
+    "Aplico el modelo generado que esta en la variable \"modelo\" a los datos \"dapply\"\n"
    ]
   },
   {
@@ -101,8 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "prediccion es una matriz con TRES columnas, llamadas \"BAJA+1\", \"BAJA+2\"  y \"CONTINUA\"\n",
-    "cada columna es el vector de probabilidades "
+    "prediccion es una matriz con TRES columnas, llamadas \"BAJA+1\", \"BAJA+2\" y \"CONTINUA\" cada columna es el vector de probabilidades\n"
    ]
   },
   {
@@ -119,6 +108,13 @@
     "#genero el archivo para Kaggle\n",
     "fwrite( entrega, file=\"./kaggle/K101_002.csv\", sep=\",\" )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -133,7 +129,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.0"
+   "version": "4.0.4"
   }
  },
  "nbformat": 4,
